# code_manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  MANIFEST.in  Makefile  README.md  README.org  cache  code_manager.py  conf  downloader.py  gen_packages_node.py  installer.py  merge_packages_lists.py  packages.json  requirements.txt  setup.cfg  setup.py  utils.py
code_manager/: __init__.py  code_manager.py  core.py  deb_dependency.py  downloader.py  gen_packages_node.py  installer.py  main.py  merge_packages_lists.py  utils.py
code_manager/commands/: command.py  commit.py  find.py  grep.py  pull.py  push.py  root.py  sed.py
code_manager/core/: cache_container.py  command_container.py  configuration.py  deb_dependency.py  debgrapher.py  downloader.py  fetcher.py  installation.py  installer.py  manager.py
code_manager/data/: conf  packages.json  sources
code_manager/installers/: autoreconf.py  bashrc.py  cmake.py  command.py  cp.py  emacs.py  gradle.py  ld.py  ln.py  make.py  maven.py  nodejs.py  path.py  script.py  setup_py.py
code_manager/utils/: contextmanagers.py  importing.py  lazy_property.py  logger.py  path_utils.py  printing.py  process.py  read_input.py  setenv.py  strings.py  utils.py
tests/: test_depender.py  test_downloader.py  test_installer.py  test_marging_packages.py  test_utils.py
tests/data/: packages1.json  packages2.json
