[metadata]
name = CodeManager
version = 1.0.0
author = Stanislav Arnaudov
author_email = stanislav_ts@abv.bg
description = Utility for automatic downloading, compiling and  installing softaware from internet.
long_description_content_type = text/markdown
license = GNU General Public License v3.0
keywords = package code manager utility installation downloading compiling
url = https://github.com/palikar/code_manager
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Installation/Setup
description-file = README.md

[options]
include_package_data = True
packages = find:
setup_requires = pytest-runner
tests_require = pytest

[options.entry_points]
console_scripts =
    code-manager = code_manager.main:main
    gen-packages-node = code_manager.gen_packages_node:main

[options.package_data]
code_manager =
    data/*
    install_scripts/*

[pep8]
ignore = E111,E114,E501
max-line-length = 100

[tool:pytest]
pep8ignore = E111 E114
pep8maxlinelength = 120k

[flake8]
ignore = E501, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
